# chr2

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: crash_test.rs
src/: lib.rs  main.rs
src/chaos/: checker.rs  mod.rs  nemesis.rs  network.rs  runner.rs  tests.rs
src/engine/: commit_index.rs  disk.rs  durability.rs  errors.rs  fault_injection.rs  format.rs  log.rs  manifest.rs  metrics.rs  mod.rs  reader.rs  recovery.rs  uring.rs
src/kernel/: bank.rs  mod.rs  side_effect_manager.rs  snapshot.rs  traits.rs  vsr_authority.rs
src/kernel/executor/: error.rs  mod.rs  recovery.rs  snapshot_ops.rs  step.rs  tests.rs
src/vsr/: client.rs  error.rs  message.rs  mod.rs  network.rs  node.rs  quorum.rs  tests.rs
