[package]
name = "chronon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deterministic execution kernel with crash-safe replication and exactly-once side effects"
repository = "https://github.com/abokhalill/chr2"
homepage = "https://github.com/abokhalill/chr2"
documentation = "https://docs.rs/chronon"
readme = "README.md"
keywords = ["distributed", "replication", "consensus", "deterministic", "state-machine"]
categories = ["database", "concurrency", "asynchronous"]
rust-version = "1.70"

[features]
default = []
io_uring = ["io-uring"]

[dependencies]
libc = "0.2"
blake3 = "1.5"
crc32c = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crossbeam-channel = "0.5"
rand = "0.8"
io-uring = { version = "0.6", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"

[[example]]
name = "crash_test"
path = "examples/crash_test.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
